# dat-orchestrator

./: Dockerfile  pyproject.toml
src/Executables/: main.py
src/Orchestrator/: main.py  worker.py
