[project]
name = "dat-orchestrator"
version = "0.1.0"
description = "Will house executables and orchestrate job runs"
license = {text = "MIT License"}
dependencies = [
  "celery",
  # "pydantic",
  # "sphinx@git+https://github.com/sphinx-doc/sphinx#egg=branchname",
  "dat-core@git+ssh://git@github.com/riju-dc/dat-core@feature/base-classes",
  "verified-sources@git+ssh://git@github.com/dc-rahul/verified-sources@feature/google-drive-and-wikipedia-forked",
  "verified-generators@git+ssh://git@github.com/riju-dc/verified-generators@feature/openai-embeddings-and-sentence-transformers",
  "verified-destinations@git+ssh://git@github.com/ankit-dc/verified-destinations@feature/pinecone-qdrant-and-mysql",
  
  # "PyYAML",
  # TODO
  # "openai",
  # "langchain_openai",
]

[build-system]
requires = [
    "setuptools", "wheel",
]

# [tool.setuptools.packages.find]
# exclude = ["Executables*", "Orchestrator*", ] 